@@ -34,6 +34,7 @@
 	* common/docman/*: Ditto.
 	* common/forum/*: Ditto.
 	* common/frs/*: Ditto.
+	* common/pm/*: Ditto.
 
 2008-01-11  Roland Mas  <lolando@debian.org>
 
